# cli-agent

./: .env.example  .gitignore  Agents.md  Cargo.toml  README.md  RELEASE.md  claude_design.md  codex_design.md  mcp_servers.example.json  mcp_servers.json
agents/: analyzer.yaml  coder.yaml  config_manager.yaml  extractor.yaml  fallback.yaml  planner.yaml  reviewer.yaml  scheduler.yaml  summarizer.yaml  tool_caller.yaml  validator.yaml
agents/team/: devops_hyunji.yaml  frontend_dev_yuna.yaml  junior_dev_seojin.yaml  pm_soyeon.yaml  qa_engineer_taewon.yaml  senior_dev_minho.yaml  tech_lead_jihun.yaml
blog/: blog-post-en.md  blog-post-ko.md
docs/: PROJECT_ANALYSIS_TODO.md  index.md
docs/architecture/: backend.md  dag-execution.md  frontend.md  memory-context.md  overview.md
docs/business-logic/: agent-model-routing.md  chat-flow.md  gateway.md  mcp-integration.md  memory-system.md  skill-workflow.md  task-classification.md
docs/development/: status.md  todo.md
docs/guides/: cli-usage.md  (+4 more)
migrations/: 0001_initial_schema.sql  0002_memory_search_index.sql
scripts/: build.sh  dev.bat  dev.ps1  dev.sh  start.sh
skills/: git_clone_repo.yaml  git_commit_push.yaml  git_recent_history.yaml  git_worktree_summary.yaml  github_repo_overview.yaml  local_repo_overview.yaml  multi_role_dev.yaml  team_dev_workflow.yaml
src/: command_resolver.rs  config.rs  crypto.rs  lib.rs  main.rs  notifier.rs  scheduler.rs  session_workspace.rs  types.rs
tests/: api_integration.rs
web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
(+111 files in other folders)
