[package]
name = "cli-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-stream = "0.3"
async-trait = "0.1"
axum = { version = "0.7", features = ["macros", "ws"] }
chrono = { version = "0.4", features = ["clock", "serde"] }
cron = "0.13"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.28"
dashmap = "6.1"
ed25519-dalek = { version = "2.1", features = ["pkcs8"] }
futures = "0.3"
portable-pty = "0.8"
hex = "0.4"
hmac = "0.12"
http = "1.2"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
shell-words = "1.1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
thiserror = "2.0"
tokio = { version = "1.43", features = ["full"] }
tokio-stream = "0.1"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.13", features = ["v4", "serde"] }
